--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "author": "Joshua Uzzell <josh.uzzell@gmail.com>",
     "license": "ISC",
     "devDependencies": {
+        "html-webpack-plugin": "^5.5.0",
+        "jest": "^29.3.1",
         "webpack": "^5.75.0",
-        "webpack-cli": "^5.0.1", 
-        "html-webpack-plugin": "^5.5.0"
+        "webpack-cli": "^5.0.1"
     },
     "dependencies": {
         "expandables-js": "1.0.0"
-    }, 
+    },
     "browserslist": {
         "production": [
             ">0.2%",
