--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
     "description": "Test application to demonstrate capabilities of CnE library developed by Joshua Uzzell",
     "main": "src/app/index.html",
     "scripts": {
-        "build": "webpack"
+        "build": "webpack",
+        "test": "jest"
     },
     "keywords": [],
     "author": "Joshua Uzzell <josh.uzzell@gmail.com>",
     "license": "ISC",
     "devDependencies": {
-        "html-webpack-plugin": "^5.5.0",
-        "jest": "^29.3.1",
+        "@babel/plugin-transform-modules-commonjs": "^7.20.7",
+        "@testing-library/dom": "^8.17.1",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/user-event": "^14.4.3",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^28.1.3",
+        "jest-environment-jsdom": "^29.0.1",
         "webpack": "^5.75.0",
-        "webpack-cli": "^5.0.1"
+        "webpack-cli": "^5.0.1", 
+        "html-webpack-plugin": "^5.5.0"
     },
     "dependencies": {
         "expandables-js": "1.0.0"
