--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
         "@testing-library/dom": "^8.17.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/user-event": "^14.4.3",
+        "css-loader": "^6.7.3",
+        "html-webpack-plugin": "^5.5.0",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^28.1.3",
         "jest-environment-jsdom": "^29.0.1",
+        "sass": "^1.57.1",
+        "sass-loader": "^13.2.0",
+        "style-loader": "^3.3.1",
         "webpack": "^5.75.0",
-        "webpack-cli": "^5.0.1", 
-        "html-webpack-plugin": "^5.5.0"
+        "webpack-cli": "^5.0.1"
     },
     "dependencies": {
-        "expandables-js": "1.1.1", 
-        "ui-cable-js" : "1.0.0"
+        "expandables-js": "1.1.1",
+        "ui-cable-js": "1.0.0"
     },
     "browserslist": {
         "production": [
