--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     },
     "dependencies": {
         "expandables-js": "1.2.0",
-        "ui-cable-js": "1.0.2"
+        "ui-component-eventbus-js": "1.0.2", 
+        "html5-form-validation-js": "0.9.2", 
+        "banner-alert-js": "0.9.0", 
+        "flyout-overlay-js": "0.9.1", 
+        "modal-popups-js": "0.9.0"
     },
     "browserslist": {
         "production": [
